Feature EPL-405 change comparative and move admin mode